--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "devDependencies": {
     "@rocketseat/eslint-config": "2.1.0",
+    "@types/bcryptjs": "2.4.2",
     "@types/node": "20.4.8",
     "eslint": "8.46.0",
     "prisma": "5.1.1",
@@ -22,6 +23,7 @@
   },
   "dependencies": {
     "@prisma/client": "5.1.1",
+    "bcryptjs": "2.4.3",
     "dotenv": "16.3.1",
     "fastify": "4.21.0",
     "zod": "3.21.4"
