--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,7 @@
 NODE_ENV=dev
+
+# Auth
+JWT_SECRET=
+
+# Database
+DATABASE_URL="postgresql://johndoe:randompassword@localhost:5432/mydb?schema=public"
