--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "vitest": "0.34.1"
   },
   "dependencies": {
+    "@fastify/jwt": "7.2.2",
     "@prisma/client": "5.1.1",
     "bcryptjs": "2.4.3",
     "dayjs": "1.11.9",
